// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleDropdown should display items and allow selecting after toggle is clicked: expanded 1`] = `
<DocumentFragment>
  <button
    aria-expanded="true"
    aria-label="Dropdown menu"
    class="pf-v6-c-menu-toggle pf-m-expanded"
    data-ouia-component-id="OUIA-Generated-MenuToggle-4"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      Lorem ipsum
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`SimpleDropdown should display items and allow selecting after toggle is clicked: select 1`] = `
[
  [
    "dolor",
  ],
]
`;

exports[`SimpleDropdown should have a dropdown label: label 1`] = `
<span
  class="pf-v6-c-menu-toggle__text"
>
  lorem ipsum
</span>
`;

exports[`SimpleDropdown should have a ouia id: button_ouiaid 1`] = `
<button
  aria-expanded="false"
  aria-label="Dropdown menu"
  class="pf-v6-c-menu-toggle pf-m-disabled"
  data-ouia-component-id="lorem_ipsum"
  data-ouia-component-type="PF6/MenuToggle"
  data-ouia-safe="true"
  disabled=""
  type="button"
>
  <span
    class="pf-v6-c-menu-toggle__text"
  >
    lorem ipsum
  </span>
  <span
    class="pf-v6-c-menu-toggle__controls"
  >
    <span
      class="pf-v6-c-menu-toggle__toggle-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 320 512"
        width="1em"
      >
        <path
          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        />
      </svg>
    </span>
  </span>
</button>
`;

exports[`SimpleDropdown should have dropdown items with ouia id: expanded_ouiaid 1`] = `
<DocumentFragment>
  <button
    aria-expanded="true"
    aria-label="Dropdown menu"
    class="pf-v6-c-menu-toggle pf-m-expanded"
    data-ouia-component-id="lorem_ipsum"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      lorem ipsum
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`SimpleDropdown should render a basic component: basic 1`] = `
<Dropdown
  isOpen={false}
  onOpenChange={[Function]}
  onSelect={[Function]}
  toggle={[Function]}
>
  <DropdownList />
</Dropdown>
`;
